@@ -6,7 +6,9 @@ import com.joescaos.library_crud.entity.Author;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Component;
 
+import java.util.Collections;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Component
 @RequiredArgsConstructor
@@ -16,10 +18,10 @@ public class AuthorMapper {
 
     public AuthorDto toDTO(Author author) {
 
-        List<BookDto> books = author.getBooks()
-                .stream()
-                .map(bookMapper::toDTO)
-                .toList();
+        List<BookDto> books = author.getBooks() == null
+                ? Collections.emptyList()
+                : author.getBooks().stream()
+                .map(bookMapper::toDTO).collect(Collectors.toList());
 
         return new AuthorDto(
                 author.getId(),
